@@ -2367,3 +2367,10 @@ Fri Sep 24 16:43:48 EST 1999
 
 Grrr. Added more bugs.
 
+
+-------------------------------------------------------------------------------
+
+Sat Sep 25 13:03:34 PDT 1999
+(Raster)
+
+fix iconbox border going all wierd when in auto resize mode.. :)
